120char line in code examples

--- a/site/src/main/resources/style.css
+++ b/site/src/main/resources/style.css
@@ -78,3 +78,14 @@ figure.highlight {
 figure.highlight > pre {
     overflow-x: auto !important;
 }
+
+figure.highlight > pre:before {
+    background-color: #eee;
+    bottom: 0;
+    content: ' ';
+    display: block;
+    left: 120ex;
+    position: absolute;
+    top: 0;
+    width: 1px;
+}
