--- a/site/src/main/resources/style.css
+++ b/site/src/main/resources/style.css
@@ -6,7 +6,7 @@ body {
     font-family: "Open Sans", sans-serif;
 }
 
-h1, h2, h3, h4, h5 {
+h1, h2, h3, h4, h5, .h1, .h2, .h3, .h4, .h5, .h6 {
     font-family: Inter, Arial, sans-serif;
 }
 
